Delete not used service methods, fix api methods, update api.yaml file
