# src/main/java/company/busmanagement/service/api/BusMngmtService.java
@@ -22,8 +22,5 @@ public interface BusMngmtService {
 
     BusDto getBusById(Long busId) throws BusNotExistException, InvalidIdException;
 
-    List<BusDto> findByPeopleAmount(Long amount);
-
-    List<BusDto> findByTrip(String location);
-
+    List<BusDto> getAll() throws BusNotExistException;
 }
