# src/main/resources/api/BusService_OpenApi_1.0.0.yaml
@@ -87,98 +87,6 @@ paths:
         '204':
           description: No any bus found
           content: { }
-  /buses/findByPeopleAmount:
-    get:
-      tags:
-        - buses
-      summary: Find bus by amount of people allowed in the bus
-      operationId: findByPeopleAmount
-      parameters:
-        - name: amount
-          in: query
-          description: Amount value that needs to be considered for filter
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: integer
-            format: int64
-            default: 0
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Bus'
-        '400':
-          description: Bad request
-          content: { }
-        '404':
-          description: No any bus found
-          content: { }
-  /buses/findByTrip:
-    get:
-      tags:
-        - buses
-      summary: Find buses by trip they follow
-      operationId: findByTrip
-      parameters:
-        - name: trip
-          in: query
-          description: Name of place in the trip bus passes
-          style: form
-          explode: true
-          schema:
-            type: string
-            minLength: 1
-            maxLength: 20
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Bus'
-        '400':
-          description: Bad request
-          content: { }
-        '404':
-          description: No any bus found
-          content: { }
-  '/buses/{busId}/getDrivers':
-    get:
-      tags:
-        - buses
-      summary: Returns drivers that can  drive this bus
-      operationId: getDrivers
-      parameters:
-        - name: busId
-          in: path
-          description: ID of bus to return
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Driver'
-        '400':
-          description: Bad Request
-          content: { }
-        '404':
-          description: No any bus found
-          content: { }
   '/buses/{busId}':
     get:
       tags:
